Switched to many-to-many design for items and ingrediants.  Split management sections to separate navigation items.

--- a/htdocs/assets/style/layout.css
+++ b/htdocs/assets/style/layout.css
@@ -193,12 +193,18 @@ h3
     list-style: none;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 .menu li
 {
     margin: 0 0 1em 0;
     padding: 0;
+}
+
+.menu .title .add-to-cart
+{
+    margin-left: 1ex;
 }
 
 .user::before
